--- a/webapp/avision/Tpl/HDPlayer/play.html
+++ b/webapp/avision/Tpl/HDPlayer/play.html
@@ -580,9 +580,10 @@ function onResizeEven()
 			<div>
 				<img id="logoImg" src="{$logoImg}" width="64" height="64"/>
 			</div>
-			<div class="bodyTitle">
+			<div class="bodyTitle" style="width:500px; display: inline-block;">
 				{$title}
 			</div>
+			<div style="float: right; width:10em; font-size:0.6rem; overflow: hidden">{$username}</div>
 			<div class="btnLink">
 				<div id="tbEntrytimes" style="cursor:pointer;">
 					<img src="/player/{$theme|default='default'}/images/bofan_s.png"/>
