--- a/webapp/avision/Tpl/Home/login_w.html
+++ b/webapp/avision/Tpl/Home/login_w.html
@@ -93,7 +93,9 @@ $(document).ready(function()
 						<a href="{$wxLoginUrl}" style="float:left;"><img src="__PUBLIC__/images/wx64.png" style="margin-left:10px;width:36px;vertical-align:middle;"/>微信登录</a>
 						<a href="__APP__/Home/register" style="float:right;line-height:36px;margin-right:15px;">免费注册</a>
 					</div>
-					<input type='hidden' name='chnid' value='{$chnid}' />
+					<input type='hidden' name='chnId' value='{$chnId}' />
+				<input type='hidden' name='acceptUrl' value='{$acceptUrl}' />
+				<input type='hidden' name='rejectUrl' value='{$rejectUrl}' />
 			</form>
 		</div>
 		<!--
