--- a/webapp/avision/Tpl/Home/header_w.html
+++ b/webapp/avision/Tpl/Home/header_w.html
@@ -25,7 +25,7 @@
 				</eq>
 			</div>	
         	<else/>
-				<a href="__APP__/Home/login" class="btn">注册/登录</a>
+				<a href="__APP__/Home/login?chnId=0&acceptUrl=__APP__/Home/index&title=易网真&errorMsg=&coverImg=" class="btn">观众注册/登录</a>
 			</eq>
 			
 		</div>
