--- a/webapp/avision/Tpl/Home/index.html
+++ b/webapp/avision/Tpl/Home/index.html
@@ -18,7 +18,7 @@ $(document).ready(function(){
 	});
 	$('.iptLog').click(function(){
 		console.log("__URL__/login");
-		location.href = "__URL__/login?scrType=h";
+		location.href = "__URL__/login?chnId=0&acceptUrl=__APP__/Home/index&title=易网真&errorMsg=&coverImg=&scrType=h";
 	});
 	$('.iptLgo').click(function(){
 		location.href = "__URL__/logout?scrType=h";
