--- a/webapp/avision/Tpl/Home/register.html
+++ b/webapp/avision/Tpl/Home/register.html
@@ -311,14 +311,12 @@ a{
 	padding-right:0.5em;
 }
 .iptReg{
-	border-color: #16599f;
-    border-style: solid;
-    border-width: thin;
+	border: 1px solid #16599f;
     color: #16599f;
-    background-color: #fff;
+    background-color: #Fee;
 	width:8em;
 	height:2em;
-	font-size:1.5em;
+	font-size:1em;
 }
 .flex-contBetween {
     display: -webkit-flex;
@@ -373,7 +371,7 @@ a{
 	<span>短信验证码</span><input name="code" id="code" value="{$code}" class="easyui-textbox" style="width:100px;" data-options="prompt:'验证码'">
 	</div>
 	<div class="rowItem">
-	<span>昵称</span><input name="username" id="username" value="{$username}" class="easyui-textbox" style="width:150px;" data-options="prompt:'选个好听威猛的名字'">
+	<span>昵称</span><input name="username" id="username" value="{$username}" class="easyui-textbox" style="width:150px;" data-options="prompt:'选个红火的名字'">
 	</div>
 	<div class="rowItem" id="divRealName">
 	<span>真实姓名</span><input name="realname" id="realname" value="{$realname}" class="easyui-textbox" style="width:150px;" data-options="prompt:'真实姓名'">
