--- a/webapp/avision/Tpl/Home/register_w.html
+++ b/webapp/avision/Tpl/Home/register_w.html
@@ -93,8 +93,9 @@ function IsVaildAccount()
 <div id="loginbox" class="centerdiv" style="600px;">
 	<form  id="form1" action="__URL__/doRegister" method="post">
 		<div class="input-box">
-		<div class="title">用户注册</div>
+		<div class="title">观众注册</div>
 		<p class="note">请填写以下用户注册信息，若您已经是易网真用户，请 <a href="__APP__/Home/login">登录</a></p>
+		<p class="note" style="color: red"><b>*注意*</b>这里仅注册观众账号，若需要注册播主请点击首页中间的“我要直播”</p>
 		<table width="90%" align="center">
 			<tr>
 				<td>手机号码：</td>
