--- a/webapp/avision/Tpl/Home/toBroadcast_w.html
+++ b/webapp/avision/Tpl/Home/toBroadcast_w.html
@@ -247,6 +247,7 @@ function btnSendSms()
 			<div class="title">注册主播</div>
 			<neq name='isLogin' value='true'>
 				<p class="note">请填写以下用户注册信息，若您已经是易网真用户，请先登录后再补充播主的资料。</p>
+				<p class="note" style="color: red"><b>*注意*</b>若仅是为了观看直播，请点击右上角的“观众注册”</p>
 				<table width=90% align="center">
 				<tr>
 					<td>手机号码：</td>
@@ -278,7 +279,7 @@ function btnSendSms()
 					<td>用户昵称：</td>
 					<td>
 						<input class="easyui-textbox"  name="username" value="{$username}" style="width:200px;height:32px"
-						data-options="prompt:'选个好听威猛的名字' " >
+						data-options="prompt:'选个红火的名字' " >
 					</td>
 				</tr>
 				<tr>
