--- a/webroot/t3.html
+++ b/webroot/t3.html
@@ -28,9 +28,39 @@ function tt(){
 	padding: 5px;
 	margin:3px;
 }
+	div{
+		border: 1px solid #0E2D5F;
+		margin: 5px;
+	}
+	.box{
+		display:flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content:space-around;
+	}
 </style>
 </head>
 <body>
+
+<div class="box">
+	<div>
+		11111
+	</div>
+	<div>
+		11111<br>
+		2222
+	</div>
+	<div>
+		11111
+	</div>
+	<div>
+		11111
+	</div>
+	<div>
+		11111
+	</div>
+</div>
+
 <div id="outer">
 T33333333333333
 	<div id="inner">
