--- a/webapp/avision/Tpl/Home/login.html
+++ b/webapp/avision/Tpl/Home/login.html
@@ -7,8 +7,9 @@
 $(document).ready(function(){
     var title="{$title}";
     var coverImg="{$coverImg}";
+    console.log("coverImg:"+coverImg);
 	if("" != title ) $(document).attr('title',title);	//动态更改标题
-    if("" != title ) $("#coverImg").attr('src',coverImg);	//动态更改封面图片
+    if("" != coverImg ) $("#coverImg").attr('src',coverImg);	//动态更改封面图片
 	//console.log('title:'+title);
 	$("input",$("#username").next("span")).focus(function(){  
 	});
