--- a/webapp/avision/Tpl/Home/purchase_w.html
+++ b/webapp/avision/Tpl/Home/purchase_w.html
@@ -4,7 +4,7 @@
 <load href="__PUBLIC__/js/jquery.json.min.js" />
 <div id="north">
 	<div id="slogan">
-		<div>1分钱1分钟，直播好轻松！</div>
+		<div>1分钱1分钟，直播好轻松！<span style="font-size: 0.5em">(最优惠套餐)</span></div>
 	</div>
 	<div id="sub-menu">
 		<a href="http:__URL__/recharge" class="btn btn-step 
