--- a/webapp/avision/Tpl/MG_Channel/setting.html
+++ b/webapp/avision/Tpl/MG_Channel/setting.html
@@ -116,7 +116,7 @@
 	</header>
 	<ul class="m-list" style="margin:0 20px;">
 		<li><a href="javascript:void(0)"  func="set_module" class="chnSettingLink">功能模块设置</a></li>
-		<li><a href="javascript:void(0)"  func="set_module" class="chnSettingLink">界面装修(TODO)</a></li>
+		<li><a href="javascript:void(0)"  func="set_registe" class="chnSettingLink">认证注册设置</a></li>
 		<li><a href="javascript:void(0)"  func="set_module" class="chnSettingLink">可用礼物选择(TODO)</a></li>
 		<li><a href="javascript:void(0)"  func="set_module" class="chnSettingLink">观众注册信息设置(TODO)</a></li>
 
