--- a/webapp/avision/Tpl/My/showMyInfo.html
+++ b/webapp/avision/Tpl/My/showMyInfo.html
@@ -1,5 +1,5 @@
 <div style="padding:6px 0;">
     <div class="OUI-btn OUI-font14" .OUI-color1 style="" >
-        <a  href="__APP__/Home/Index">退出登录</a>
+        <a  href="__APP__/Home/Logout">退出登录</a>
     </div>
 </div>
