--- a/webroot/j.html
+++ b/webroot/j.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-<title>直播间</title>
+<title>直播间pop</title>
 
 
 <script type="text/javascript" src="http://cdn.aodianyun.com/static/jquery/jquery-1.7.2.min.js"></script><!-- jquery地址也可使用您的地址 -->
