--- a/webapp/avision/Tpl/CH_cctsxx/index.html
+++ b/webapp/avision/Tpl/CH_cctsxx/index.html
@@ -137,7 +137,9 @@
     </div>
 -->
     <div id="my-course">
-        <div class="subhead">📑 <div style="display: inline-block; border-bottom: 1px dotted #66e; width: 50%;">我的课程</div></div>
+        <div class="subhead">📑 <div style="display: inline-block; border-bottom: 1px dotted #66e; width: 50%;">我的课程</div>
+            <a href="__URL__/index/work/udInf"><div id="updateLink" style="float: right;margin-right: 1em; font-size: 12px;">更新用户资料</div></a>
+        </div>
         {:R('WD_ChannelList/courseList',array( $uid,$agentid,false),'Widget')}
     </div>
     <div style="margin-top: 15px;">
@@ -186,6 +188,7 @@
         $("#info_title").html('用户服务');
         $.mobile.go('#userinfo');
     });
+
 </script>
 </body>
 </html>
