2020-02-17 为同一VOD文件可分享到不同的频道做一系列修改
1、修改onlinelog表，增加objowner，以便在访问对象删除后依然可以进行一些统计。
2、相应修图onlinemodel，移动到log时复制objowner字段
3、增加deletedlog记录可能需要翻查的已删除记录。
4、增加Ou.Function中的contextToken类处理页面上下文增强安全性。
5、增加录像记录的分享功能。相应修改记录的删除逻辑。
6、播主概览界面增加频道ID显示
7、取消recordfile中channelid+path的unique关键字

--- a/webapp/avision/Tpl/Console/overView_w.html
+++ b/webapp/avision/Tpl/Console/overView_w.html
@@ -214,7 +214,7 @@ console.log($("#Fcode").val());
 			<div class="pkg-main">
 				<div style="position:relative; margin-top:5px; margin-left:5px;">
 					<img id="chnlogo{$chn.id}" src="{$chn.logourl}" alt="易网真" style="width:64px;height:64px;"/>
-					<div class="chn-title">{$chn.name}</div>
+					<div class="chn-title">[{$chn.id}]{$chn.name}</div>
 					<div class="chn-descript">{$chn.descript}</div>
 				</div>
 				<div class="chn-info" >
