--- a/webapp/avision/Tpl/Vod/fileList_w.html
+++ b/webapp/avision/Tpl/Vod/fileList_w.html
@@ -28,6 +28,7 @@ $(document).ready(function(){
 
 function vodfunction(work){
 	var para=$('#dg').datagrid('getSelected');
+	para.vodFileListToken="{$vodFileListToken}";    //上下文访问令牌
 	if('add' != work && null==para){
 		alert("请先单击选定录像记录。");
 		return false;
@@ -49,8 +50,19 @@ function vodfunction(work){
 		break;
 	case "delete":
 		var url='__APP__/Vod/deleteAjax';
-		if(true!=confirm("真的删除："+para.name)) return false;
+		if(para.channelid!=0) {
+		    $.messager.alert("提示","请取消与频道的关联再删除。","info");
+		    return false;
+        }
+        var str=(para.sourceid>0)?"将删除共享的点播记录：":"将永久删除录像文件，无法恢复!  真的删除：";
+		if(true!=confirm("!!!警告!!!"+str+para.name)) return false;
 		break;
+    case "share":
+	    var target=prompt("请输入目标频道ID：");    //由于$.messager是非阻塞执行，用原生的阻塞简单点
+        if(null==target || ''==target) return false;
+        var url='__APP__/Vod/shareAjax';
+        para.target=target;  //增加目标频道参数
+        break;
 	default:
 		alert("内部错误："+work);
 		return false;
@@ -58,6 +70,7 @@ function vodfunction(work){
 	}
 	para.permitCreate='{$permitCreate}';
 	para.permitModify='{$permitModify}';
+    para.viewSelf='{$viewSelf}';
 	console.log(para);
 	$.ajaxSetup({
         cache:false
@@ -149,7 +162,11 @@ function vodfunction(work){
 		<th data-options="field:'length', width:80,align:'center',sortable:true, order:'desc' ">长度</th>
 		<th data-options="field:'size', width:80,align:'right',halign:'center',sortable:true, order:'desc' ">大小(MB)</th>
 		<th data-options="field:'viewers', width:80,align:'right',halign:'center',sortable:true, order:'desc' ">观看人次</th>
-        <th data-options="field:'seq', width:80,align:'right',halign:'center',sortable:true, order:'desc' ">排序</th>
+        <th data-options="field:'sourceid', width:80,align:'right',halign:'center',
+            formatter:function(value){
+                if(parseInt(value)!=0) return value;
+                else return '主记录';
+            } ">共享</th>
 	</tr>
 	</thead>
 </table>
@@ -172,20 +189,27 @@ function vodfunction(work){
 	<div class="easyui-linkbutton" iconCls="icon-search" onclick="$('#cond').submit();">查询</div>
 	
 	<!-- 功能按钮 -->
-	<div id="dgbutton" style="width:250px;  ">
+	<div id="dgbutton" style="width:300px;  ">
 	<eq name='permitCreate' value='true'>
 		<a id="Append" href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true" 
 			onclick="vodfunction('add');">增加</a>
+        <a id="Append" href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-communication',plain:true"
+           onclick="vodfunction('share');">分享</a>
 	</eq>
 	<eq name='permitModify' value='true'>
 	    <a id="Remove" href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true" 
 	    	onclick="vodfunction('delete');">删除</a>
-	    <a id="Save" href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-edit',plain:true" 
+	    <a id="Save" href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-edit',plain:true"
 	    	onclick="vodfunction('modify');">修改</a>
     </eq>
 	</div>
 	<div id="msg" class="errmsg" >{$msg}</div>
 </div>
 <div id='detail'></div>
-
+    <ol>
+        <li>当修改点播记录的封面图片或视频文件时，所有共享的点播资源会同时被修改。</li>
+        <li>删除分享的点播记录不影响其它分享同一资源的点播记录。</li>
+        <li>删除主记录时同时删除视频文件及封面图片，分享的记录将无法访问对于的资源。</li>
+        <li>通过分享生成的记录不能再次分享。</li>
+    </ol>
 </block>
