--- a/webapp/avision/Tpl/Vod/showDetail.html
+++ b/webapp/avision/Tpl/Vod/showDetail.html
@@ -36,9 +36,10 @@ $(function(){
 function init_fine_upload() {
     var endpointUrl = "__APP__/Vod/endpoint";
     //上传视频
-    var size = {$size};
+    var size = parseInt("{$size}");
+    var sourceid=parseInt("{$sourceid}");
     console.log("size="+size);
-	if(0 == size) {
+	if(0 == size && sourceid<=0) {
         var videoUploader = new qq.FineUploader({
             element: document.getElementById("video-uploader"),
             debug: true,
@@ -82,46 +83,50 @@ function init_fine_upload() {
         });	// var videoUploader
     }
  	//上传封面
-	var videoUploader=new qq.FineUploader({
-		element: document.getElementById("cover-uploader"),
-        debug: false,
-        multiple:false,
-        request: { endpoint: endpointUrl+"?path={$path}&type=cover"  },
-        deleteFile: { enabled: false, endpoint: endpointUrl+"?path={$path}&type=cover&" },
-        chunking: {
-            enabled: true,
-            concurrent: {  enabled: true },
-            success: {   endpoint: endpointUrl+"?done&path={$path}&type=cover" }
-        },
-        resume: { enabled: true },
-        retry: { enableAuto: true, showButton: true  },
-        validation: {
-            //控制上传文件的后缀格式数组
-            allowedExtensions: ['jpg'],
-         	//控制上传文件大小
-            sizeLimit: 200 * 1000 // 200 kB 
-         },
-         messages:{
-        	 sizeError:"{file}太大了，最大允许上传{sizeLimit}",
-        	 typeError:"只能上传 {extensions} 文件。"
-         },
-        callbacks:{
-        	onComplete:function(id,name,response,xhr){
-        		response.name=name;
-        		response.recordId="{$id}";
-        		response.path='{$path}';
-        		//response.owner="{$owner}";
-        		//response.ownerAccount="{$account}";
-        		$.post('__APP__/Vod/postUploadCoverAjax',response,function(data){
-        			var timestamp=new Date().getTime();
-        			$("#coverimg").attr('src',data.imgUrl+'?'+timestamp.toString());
-        			$("#cover-uploader ul").html('');
-        			console.log(data);
-        		},'json');
-        		console.log(response);
-        	}
-        }
- 	});	// var videoUploader
+	//主记录才允许
+	if(sourceid<=0){
+        var videoUploader=new qq.FineUploader({
+            element: document.getElementById("cover-uploader"),
+            debug: false,
+            multiple:false,
+            request: { endpoint: endpointUrl+"?path={$path}&type=cover"  },
+            deleteFile: { enabled: false, endpoint: endpointUrl+"?path={$path}&type=cover&" },
+            chunking: {
+                enabled: true,
+                concurrent: {  enabled: true },
+                success: {   endpoint: endpointUrl+"?done&path={$path}&type=cover" }
+            },
+            resume: { enabled: true },
+            retry: { enableAuto: true, showButton: true  },
+            validation: {
+                //控制上传文件的后缀格式数组
+                allowedExtensions: ['jpg'],
+                //控制上传文件大小
+                sizeLimit: 200 * 1000 // 200 kB
+            },
+            messages:{
+                sizeError:"{file}太大了，最大允许上传{sizeLimit}",
+                typeError:"只能上传 {extensions} 文件。"
+            },
+            callbacks:{
+                onComplete:function(id,name,response,xhr){
+                    response.name=name;
+                    response.recordId="{$id}";
+                    response.path='{$path}';
+                    //response.owner="{$owner}";
+                    //response.ownerAccount="{$account}";
+                    $.post('__APP__/Vod/postUploadCoverAjax',response,function(data){
+                        var timestamp=new Date().getTime();
+                        $("#coverimg").attr('src',data.imgUrl+'?'+timestamp.toString());
+                        $("#cover-uploader ul").html('');
+                        console.log(data);
+                    },'json');
+                    console.log(response);
+                }
+            }
+        });	// var videoUploader
+	}
+
 }	//function init_fine_upload
 
 function previewRec()
@@ -184,7 +189,7 @@ $('#coverimg').ready(function(){
 		<input id="filePath" type="hidden" name="path" value="{$path}" />
 		<div style="white-space:nowrap;margin:5px;" >
 				上传录像文件  <span class="OUI-warm" style="font-weight:bold;">*警告：上传新的录像文件将永久覆盖原有的录像！</span>
-				<div id="video-uploader" style="">您没上传录像的权限</div>
+				<div id="video-uploader" style=""></div>
 		</div>
 	</div>
 	<div style="display:inline-block;vertical-align:top;margin-left:20px">
@@ -208,7 +213,7 @@ $('#coverimg').ready(function(){
 		</div>
 		<div style="white-space:nowrap;margin:10px;" >
 			更换图片
-			<div id="cover-uploader" style="width:400px">您没更改图片的权限</div>
+			<div id="cover-uploader" style="width:400px"></div>
 		</div>
 	</div>
 </form>
