2020-03-06 对播放页面进行优化，分离js出来

--- a/webapp/avision/Tpl/Play/vodList.html
+++ b/webapp/avision/Tpl/Play/vodList.html
@@ -96,6 +96,7 @@
                     var cover=$(obj).find("img").attr("src");
                     console.log(mrl,cover,fileid);
                     playPage.reloadPlayer("vod",mrl,cover,fileid);
+                    playPage.getPlayer().play();
                 }
             },'json');
 
