2020-03-07 批量导入用户时，若不填写username，采用account代替
1、批量导入用户时，若不填写username，采用account代替

--- a/webapp/avision/Tpl/Play/play.html
+++ b/webapp/avision/Tpl/Play/play.html
@@ -5,6 +5,7 @@
 
 -->
 <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.7/skins/default/aliplayer-min.css" />
+<!--<link rel="stylesheet" href="__PUBLIC__/aliplayer/aliplayer2.8.7-min.css" />-->
 <link href="__PUBLIC__/kindeditor/article.css" rel="stylesheet" >
 <style>
     .fullScreen{
@@ -157,7 +158,7 @@
     </div>
 
 </div>
-
+<script charset="utf-8" type="text/javascript" src="__PUBLIC__/aliplayer/aliplayer2.8.7-h5-min.js" ></script>
 <load href="__PUBLIC__/js/publicFunction.js" />
 <load href="__ROOT__/player/js/playpage.min.js" />
 <script>
