--- a/webroot/p1.html
+++ b/webroot/p1.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <title>易网真视频云</title>
-
+    <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.7/skins/default/aliplayer-min.css" />
     <style>
         * { box-sizing: border-box;}
 
@@ -41,8 +41,10 @@
     </style>
 </head>
 <body >
-
-<div id="playerMain" style="display: block; position:absolute; top:0;width: 100vw; height: 100vh; overflow: hidden;">
+<div class="nav-docs">
+    <a href="#">popop</a>
+</div>
+<div id="playerMain" style="display: block; position:absolute; top:500px;width: 100vw; height: 100vh; overflow: hidden;">
     <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.7/skins/default/aliplayer-min.css" />
     <link href="__PUBLIC__/kindeditor/article.css" rel="stylesheet" >
     <style>
