--- a/webroot/play.html
+++ b/webroot/play.html
@@ -84,7 +84,7 @@
     <div style="margin-top:49vh; width:100%; text-align:center; font-size: 18px;">服务器繁忙请稍后再试</div>
 </div>
 
-<script charset="utf-8" type="text/javascript" src="https://g.alicdn.com/de/prismplayer/2.8.7/aliplayer-h5-min.js" ></script>
+<!--<script charset="utf-8" type="text/javascript" src="https://g.alicdn.com/de/prismplayer/2.8.7/aliplayer-h5-min.js" ></script>-->
 <script src="/Public/jeasyui/jquery.min.js" ></script>
 <script>
     $(document).ready(function(){
