2020-03-08 改进对CDN支持
1、V3播放器地址默认使用CDN
2、V3播放器支持微信登录

--- a/webapp/avision/Tpl/Play/play.html
+++ b/webapp/avision/Tpl/Play/play.html
@@ -123,7 +123,6 @@
 
         <!-- 视频叠加层 -->
         <div class="layerVideoTop1" style="position: absolute; top:0; background-color:#00ee00;">
-
         </div>
     </div>
 
@@ -160,7 +159,7 @@
 </div>
 <script charset="utf-8" type="text/javascript" src="__PUBLIC__/aliplayer/aliplayer2.8.7-h5-min.js" ></script>
 <load href="__PUBLIC__/js/publicFunction.js" />
-<load href="__ROOT__/player/js/playpage.js" />
+<load href="__ROOT__/player/js/playpage.min.js" />
 <script>
     //本页面的全局JS对象，外部可通过此对象访问开放bridge接口，实现与对象内部的通讯
     var playPage= new Ou_playPage({
