--- a/webapp/avision/Tpl/Play/play_w.html
+++ b/webapp/avision/Tpl/Play/play_w.html
@@ -1,5 +1,184 @@
+<!--
+    播放器PC主页面 通过ThinkPHP传入的页面变量：
+-->
+<!--<link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.7/skins/default/aliplayer-min.css" />-->
+<link rel="stylesheet" href="__PUBLIC__/aliplayer/aliplayer2.8.7.css" />
+<link href="__PUBLIC__/kindeditor/article.css" rel="stylesheet" >
+<style>
+    /** 图层定义 **/
+    .layerCover{  z-index: 90;  }   /*  频道封面层 */
+    .layerCoverBtn{  z-index: 91;  }
+    .layerPopup{ z-index: 51; }     /* 弹出窗口层 */
+    .layerForce { z-index: 50; }    /* 频道强制操作层, 同时作为marsk层 */
+    /* 阿里视频窗口的z-index=11 */
+    .layerVideoTop1 { z-index: 21; } /* 视频窗口之上的显示层1，显示固定于视频之上的内容 */
+    .layerVideoTop2 { z-index: 20; } /* 视频窗口之上的显示层2，视频开始播放后不显示 */
+    .layerMain { z-index: 0; }  /* 频道主显示层 */
+
+    .fullScreen{
+        position: absolute;
+        top:0;
+        width: 100vw; height: 100vh;
+    }
+    .btnCircle{
+        border-radius: 50%;
+    }
+    #blkCover{
+        background-color: #ff3;
+        overflow-y: auto;
+    }
+    #blkForceLayer{
+        display:none;
+        background-color: rgba(120,120,120,.6); color: #fff;">
+    }
+    /** 导航条 **/
+    .tab-list {
+        font-size:16px; color: #666; white-space: nowrap;
+    }
+    .tab-list div{
+        display: inline-block; padding: 0 0.6em;
+    }
+    .tab-list .tab-selected{
+        border-bottom: 2px solid #02aaf1;
+        color:#028ae1;
+    }
+
+    /**多功能窗口容器**/
+    .tabContiner{
+        display:inline-block;position:relative;
+        vertical-align: top;
+        width: 100%;height: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+</style>
+<!-- 频道封面层，初始化时通过 $showCover 变量控制是否显示 -->
+<div id="blkCover" class="fullScreen layerCover article">
+    {$coverHtml}
+    <div id="btnEnterChannel" class="layerCoverBtn btnCircle" style="position: fixed; top:2em; right: 2em; width:4em; padding:1em;height:4em;display: flex;/*设置外层盒子display为flex*/
+            justify-content:center;/*设置内层盒子的水平居中*/
+            align-items:center;/*设置内层盒子的垂直居中*/
+            background-color: rgba(30,30,30,.3); color: #fff;">
+        <div style="position: relative;z-index: 99;">进入频道</div>
+    </div>
+</div>
+
+<!-- 强制操作层 按$forceLayer指示执行不同的操作 -->
+<div id="blkForceLayer" class="fullScreen layerForce" style="">
+    {$forceLayerHtml}
+</div>
+
+<!-- 弹出窗口，放在这里是为了避免，非同层播放时被视频遮挡 -->
+<div id="win_popup" class="layerPopup" style="position: fixed; display:none; top:65vw; left:0; right:0; margin: 0 auto; width: 96%; min-height: 57vw;
+        box-shadow: 0 0 3px 1px #999 inset; border-radius:14px; background-color: #feffff; padding: 15px; text-align: center;">
+    <div class="win_notify" style="margin-top: 16px; font-size: 18px; color: #444;"> </div>
+    <div class="blk_button" style="position: absolute; width: 95%; bottom: 30px; text-align:center; ">
+        <button style="border-radius:5px; padding:2px 15px; font-size:16px;">确定</button>
+    </div>
+</div>
+
+<!-- 播放器层-->
+<div id="blk_pcContainer" style="position: relative; width: 100%; height: 100%; overflow: auto;">
+    <div id="blk_main" style="position: relative;display: flex; flex-flow: column nowrap; width: 100%; height: 100%; min-width:1200px;overflow-x:auto; overflow-y:hidden;background-color: #FFF;">
+        <!-- 顶部栏 -->
+        <div id="blk_north" style="position: relative; display:flex;justify-content: space-between; align-items: center; top:0; width: 100%; height: 64px; flex: 0 0 auto; overflow:hidden; ">
+            <div class="blk_head_left" style="display: flex; align-items: center;">
+                <div style="height: 64px; width: 50px; margin-right: 14px; background-color: #cc3333;"></div>
+                <img id="logoImg" src="{$logoImg}" width="58" height="58" style=""/>
+                <div style="max-width:1200px;overflow: hidden; padding: 0 10px; font-size: 22px;">{$title}</div>
+            </div>
+            <div class="blk_head_right" style="display:flex;align-items: center;">
+                <!-- 导航条 -->
+                <div id="tabBar" class="tab-list" style="font-size:16px; white-space: nowrap;">
+                    <assign name="tabOrder" value="0" />
+                    <foreach name="tabs" key="tabid" item="tabtext">
+                        <div tabid="{$tabid}" tabOrder="{$tabOrder++}" >{$tabtext}</div>
+                    </foreach>
+                </div>
+                <img id="logoImg" src="{$UserHeadImg}" style="margin:0 15px;width:32px; height:32px; border-radius: 50%; "/>
+            </div>
+        </div>
+        <div id="blk_center" style="position: relative; display:flex; flex-flow:row nowrap; width: 100%; height: 300px; flex: 1 0 auto; box-shadow: 0 0 2px 1px rgba(100,100,100, .5) inset;">
+            <!-- 左侧视频窗口 -->
+            <div id="blk_video" style="position: relative; width:100%;height: 100%; flex: 1 1 auto; border-right: 2px ridge #eee; background-color: #eee;margin-top:2px;">
+                <!--视频上部显示窗口-->
+                <div style="position: relative;width: 100%; height: 60px;">
+                    <!-- 叠加层 1-->
+                    <div class="layerVideoTop1" style="position: absolute; top:0;width: 100%; height: 100%;">
+                        <div class="blk_heat" style="position: absolute; bottom:6px; left:20px; line-height: 16px; font-size: 16px;">
+                            <img src="__PUBLIC__/images/fire32.png" style="height: 18px; vertical-align: middle;">
+                            <span style="display: inline-block; padding: 2px 5px; background-color: rgba(255,255,255, .4); border-radius: 8px;">{$entrytimes}</span>
+                        </div>
+                    </div>
+                    <!-- 叠加层 2-->
+                    <div class="layerVideoTop2" style="position: absolute; top:0; width: 100%; height: 100%; ">
+                        <div class="blk_airTime" style="position: absolute; bottom: 30px; right: 10px; font-size: 18px; color:#fff; "></div>
+                        <div class="blk_leftTime" style="position: absolute; bottom: 6px; right: 10px; font-size: 18px; color:#009999; "></div>
+                    </div>
+                </div>
+                <div  class="blk_video"  style="position: relative;width:100%; height:0;padding-top: 56.25%; flex:none; overflow: hidden;border: 5px solid transparent;">
+                    <div  class="prism-player" id="prismPlayer" style="position: absolute;width:100%; height:100%; top:0;"></div>
+                </div>
+            </div>
+            <!-- 右侧多功能窗口 -->
+            <div id="blk_func" style="position: relative; margin-top:2px; margin-right:2px;width:640px;height: 100%; flex: 0 0 auto; overflow-x: auto;overflow-y:hidden;white-space: nowrap;">
+                <foreach name="tabs" key="tabid" item="tabtext">
+                    <div class="tabContiner" id="tabItem{$tabid}" >
+                        <div style="position: relative; margin: 30% auto; text-align: center">
+                            <img src="Public/images/loading.gif" style="width: 128px;">
+                            <div>{$tabtext} loading...</div>
+                        </div>
+
+                    </div>
+                </foreach>
+            </div>
+            <!-- 图文直播容器-->
+            <div id="pictxt" style="position: relative; bottom:0; height:100%; width:100%;  background-color: #FFF;display:none; overflow-x: hidden; overflow-y: auto; white-space: normal;">Loading...</div>
+        </div>
+
+    </div>
+</div>
+
+<script charset="utf-8" type="text/javascript" src="__PUBLIC__/aliplayer/aliplayer2.8.7-h5-min.js" ></script>
+<load href="__PUBLIC__/js/publicFunction.js" />
+<load href="__ROOT__/player/js/playpage.js" />
 <script>
-    (function(){
-        window.location.href="http://www.av365.cn/home.php/HDPlayer/play.html?chnId={$chnid}&r={$vodid}";
-    })();
+$(document).ready(function () {
+    //alert("document ready..");
+    function kkk(event,dd){
+        console.log("Recv trigger Data event ......");
+    }
+    $(window).on("RecvData",kkk);
+
+});
+
+
+    //本页面的全局JS对象，外部可通过此对象访问开放bridge接口，实现与对象内部的通讯
+    var playPage = new Ou_playPage({
+        showCover: "{$showCover}" == "1" ? true : false,    //是否显示频道封面
+        chnid: "{$chnid}",   //当前频道ID
+        vodid: "{$vodid}",   //需要播放的VOD文件ID
+        uid: "{$uid}",       //当前用户ID
+        agent: "{$agent}",
+        playType: "{$playType}", //播放类型 [live|vod]
+        activetab: "{$activetab}",   //默认活跃的tabID
+        source: "{$source}",     //要播放的视频源
+        cover: "{$cover}",       //视频区封面图片
+        forceLayer: "{$forceLayer}", //强制操作层显示内容
+        onlineid: "{$onlineid}",     //本web页面的onlineid，在线表中另有副本
+        playToken: "{$playToken}",   //有权播放令牌
+        aliveTime: "{$aliveTime}",    //最长通讯时间间隔(秒)
+        operatorIdleInt: "{$operatorIdleInt}",   //播放终端最长不操作时间(秒)
+        homeUrl: "{$homeUrl}",       //首页地址
+        airTime: "{$airTime}",       //开始直播时间
+        airDuration: "{$airDuration}",   //播出时长
+        isAdmin: "{$isAdmin}",       //是否特权用户
+        title: "{$title}",       //页面标题
+        desc: "{$desc}",     //频道或点播视频的说明
+        appUrl: "__APP__",       //应用基本地址
+        tabItemPrefix: "tabItem"     //多功能窗口内各tab容器子窗口的id前缀
+    });
+
+
+
 </script>
