2020-03-20 修复旧版聊天的小bug

--- a/webapp/avision/Tpl/Play/play.html
+++ b/webapp/avision/Tpl/Play/play.html
@@ -188,8 +188,8 @@
         agent: "{$agent}",
         playType: "{$playType}", //播放类型 [live|vod]
         activetab: "{$activetab}",   //默认活跃的tabID
-       // source: "{$source}",     //要播放的视频源
-        source: "http://v2.av365.cn/live/ou.m3u8",     //要播放的视频源
+        source: "{$source}",     //要播放的视频源
+        //source: "http://v2.av365.cn/live/ou.m3u8",     //要播放的视频源
         cover: "{$cover}",       //视频区封面图片
         forceLayer: "{$forceLayer}", //强制操作层显示内容
         onlineid: "{$onlineid}",     //本web页面的onlineid，在线表中另有副本
