--- a/webroot/play.html
+++ b/webroot/play.html
@@ -28,7 +28,7 @@
             position: absolute;
             height: 100vh; width: 100vw;
             top:0;
-            z-index: 10;
+            z-index: 100;
             display: flex;/*设置外层盒子display为flex*/
             justify-content:center;/*设置内层盒子的水平居中*/
             align-items:center;/*设置内层盒子的垂直居中*/
@@ -89,10 +89,12 @@
 <script>
     $(document).ready(function(){
         //装入播放器页面，同时传递url给后台
-        var data={url:window.location.href, height:window.screen.height, width:window.screen.width};
-        $.ajaxSetup({ async : true   });
-        $("#playerMain").load("home.php/Play/main.html",data,function () {
-            $('#blkLoading').animate({right:'100%'});
+        var data = {url: window.location.href, height: window.screen.height, width: window.screen.width};
+        $.ajaxSetup({async: true});
+        $("#playerMain").load("home.php/Play/main.html", data, function () {
+            $('#blkLoading').animate({right: '100%'},function () {
+                $("#blkLoading").detach();
+            });
         });
     });
 
