2020-03-27 在线记录增加频道ID改漏了2个文件

--- a/webapp/avision/Tpl/HDPlayer/playFlex_m.html
+++ b/webapp/avision/Tpl/HDPlayer/playFlex_m.html
@@ -441,7 +441,7 @@ function onPlayEven()
 	heart.startOnline($('#h5Player').attr('filetype')
 						,$('#h5Player').attr('innerId')
 						,onlineSuccess
-						,onlineError);
+						,onlineError,"{$chnId}");
 }
 
 function onStopEven()
