--- a/webapp/avision/Tpl/Play/play_w.html
+++ b/webapp/avision/Tpl/Play/play_w.html
@@ -26,6 +26,7 @@
     #blkCover{
         background-color: #ff3;
         overflow-y: auto;
+        display: none;
     }
     #blkForceLayer{
         display:none;
@@ -121,7 +122,7 @@
                 </div>
             </div>
             <!-- 右侧多功能窗口 -->
-            <div id="blk_func" style="position: relative; margin-top:2px; margin-right:2px;width:640px;height: 100%; flex: 0 0 auto; overflow-x: auto;overflow-y:hidden;white-space: nowrap;">
+            <div id="blkSouth" style="position: relative; margin-top:2px; margin-right:2px;width:640px;height: 100%; flex: 0 0 auto; overflow-x: auto;overflow-y:hidden;white-space: nowrap;">
                 <foreach name="tabs" key="tabid" item="tabtext">
                     <div class="tabContiner" id="tabItem{$tabid}" >
                         <div style="position: relative; margin: 30% auto; text-align: center">
@@ -141,44 +142,41 @@
 
 <script charset="utf-8" type="text/javascript" src="__PUBLIC__/aliplayer/aliplayer2.8.7-h5-min.js" ></script>
 <load href="__PUBLIC__/js/publicFunction.js" />
-<load href="__ROOT__/player/js/playpage.js" />
+<load href="__ROOT__/player/js/playpage3.6.min.js" />
+<!--<load href="__ROOT__/player/js/playpage.js" />-->
 <script>
-$(document).ready(function () {
-    //alert("document ready..");
-    function kkk(event,dd){
-        console.log("Recv trigger Data event ......");
-    }
-    $(window).on("RecvData",kkk);
+    var playPage;
+    $(document).ready(function () {
+        var params={
+            showCover: "{$showCover}" == "1" ? true : false,    //是否显示频道封面
+            showNotice:"{$showNotice}"=="1"? true:false,    //是否显示系统公告
+            chnid: "{$chnid}",   //当前频道ID
+            vodid: "{$vodid}",   //需要播放的VOD文件ID
+            uid: "{$uid}",       //当前用户ID
+            userName:"{$userName}", //用户昵称
+            account:"{$account}",   //用户账号
+            agent: "{$agent}",
+            playType: "{$playType}", //播放类型 [live|vod]
+            activetab: "{$activetab}",   //默认活跃的tabID
+            source: "{$source}",     //要播放的视频源
+            //source: "http://v2.av365.cn/live/ou.m3u8",     //要播放的视频源
+            cover: "{$cover}",       //视频区封面图片
+            forceLayer: "{$forceLayer}", //强制操作层显示内容
+            onlineid: "{$onlineid}",     //本web页面的onlineid，在线表中另有副本
+            playToken: "{$playToken}",   //有权播放令牌
+            aliveTime: "{$aliveTime}",    //最长通讯时间间隔(秒)
+            operatorIdleInt: "{$operatorIdleInt}",   //播放终端最长不操作时间(秒)
+            homeUrl: "{$homeUrl}",       //首页地址
+            airTime: "{$airTime}",       //开始直播时间
+            airDuration: "{$airDuration}",   //播出时长
+            isAdmin: "{$isAdmin}",       //是否特权用户
+            title: "{$title}",       //页面标题
+            desc: "{$desc}",     //频道或点播视频的说明
+            appUrl: "__APP__",       //应用基本地址
+            tabItemPrefix: "tabItem"     //多功能窗口内各tab容器子窗口的id前缀
+        }
+        playPage = new Ou_playPage(params);
 
-});
-
-
-    //本页面的全局JS对象，外部可通过此对象访问开放bridge接口，实现与对象内部的通讯
-    var playPage = new Ou_playPage({
-        showCover: "{$showCover}" == "1" ? true : false,    //是否显示频道封面
-        chnid: "{$chnid}",   //当前频道ID
-        vodid: "{$vodid}",   //需要播放的VOD文件ID
-        uid: "{$uid}",       //当前用户ID
-        agent: "{$agent}",
-        playType: "{$playType}", //播放类型 [live|vod]
-        activetab: "{$activetab}",   //默认活跃的tabID
-        source: "{$source}",     //要播放的视频源
-        cover: "{$cover}",       //视频区封面图片
-        forceLayer: "{$forceLayer}", //强制操作层显示内容
-        onlineid: "{$onlineid}",     //本web页面的onlineid，在线表中另有副本
-        playToken: "{$playToken}",   //有权播放令牌
-        aliveTime: "{$aliveTime}",    //最长通讯时间间隔(秒)
-        operatorIdleInt: "{$operatorIdleInt}",   //播放终端最长不操作时间(秒)
-        homeUrl: "{$homeUrl}",       //首页地址
-        airTime: "{$airTime}",       //开始直播时间
-        airDuration: "{$airDuration}",   //播出时长
-        isAdmin: "{$isAdmin}",       //是否特权用户
-        title: "{$title}",       //页面标题
-        desc: "{$desc}",     //频道或点播视频的说明
-        appUrl: "__APP__",       //应用基本地址
-        tabItemPrefix: "tabItem"     //多功能窗口内各tab容器子窗口的id前缀
     });
-
-
 
 </script>
