2020-07-15 录像管理界面能上传site5的视频封面，临时版本

--- a/webapp/avision/Tpl/Vod/showDetail.html
+++ b/webapp/avision/Tpl/Vod/showDetail.html
@@ -179,7 +179,7 @@ $('#coverimg').ready(function(){
 
 
 </script>
-<div class="title">{$title}=={$sourceid}</div>
+<div class="title">{$title}*site={$site}</div>
 <form id="fm-detail" >
 	<div style="display:inline-block; width:500px;vertical-align:top;">
 		{$detailFormData}
